# libuuid

./: .gitattributes  .gitignore  ArchiveSourceLibuuid.bash  BuildLibuuid-msvc.bat  CMakeLists.txt  CleanLibuuid-msvc.bat  LICENSE.txt  Makefile  Makefile-1.0.3  Makefile-1.0.4  Makefile.am  PackageLibuuid.bash  README.md  autogen.sh  configure.ac  gen_uuid.c  uuidgen.c
libuuid/: .gitignore  Makefile  Nmakefile  all-io.h  c.h  config.h  gen_uuid.c  libuuid.cpp  parse.c  randutils.c  randutils.h  uuidP.h  uuid_time.c
libuuid/uuid/: uuid.h
src/: Makefile.in  configure  configure.ac
src-1.0.4/: Makefile.am  antigen.sh  autogen.sh  autogen_origin.sh  config.h.in  configure.ac
